...
                    ),
                    startPoint: .top,
                    endPoint: .bottom
                )
                Form {
                    Section(header: Text("Book Details")) {
                        TextField("Title of the book", text: $viewModel.title)
                        TextField("Author", text: $viewModel.author)
                        TextEditor(text: $viewModel.summary)
                            .frame(height:100)
                        Picker("Genre", selection: $viewModel.genre){
                            ForEach(Genre.allCases, id: \.self){ genre in
                                Text(genre.rawValue).tag(genre)
...
                    ToolbarItem(placement: .cancellationAction){
                        Button("Cancel"){
                            dismiss()
                        }
                    }
                    ToolbarItem(placement: .confirmationAction){
                        Button("Save"){
                            viewModel.save()
                            dismiss()
                        }.disabled(viewModel.title.isEmpty)
                    }
                }
            }
...
