...
                // Each book will display the following:
                NavigationLink(destination: DetailView(book: book)){
                    BookListItem(book: book)
                }
            }
            .navigationBarTitle("Book Manager")
            .navigationBarItems(trailing: Button("Add", action: {
                showAddSheet.toggle()
            }))// sets a button on the top right corner with the text "Edit"
            .sheet(isPresented: $showAddSheet){
            } content: {
                AddEditBookView(modelContext: modelContext)
            }
...
